# cookiecutter-python-cli

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  Makefile  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt
