[project]
name = "{{cookiecutter.project_slug}}"
requires-python = ">={{cookiecutter.python_version}}"
version = "2025.05.12"

[project.scripts]
nubank-ganho-capital = "{{cookiecutter.package_name}}.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["{{cookiecutter.package_name}}"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
extend-exclude = """
(
   __pycache__/
)
"""

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E741"]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]
